# extproc

./: .dockerignore  .gitignore  Cargo.toml  Containerfile  Makefile  README.md  clippy.toml  deny.toml
.claude/: CLAUDE.md
.github/workflows/: tests.yaml
deploy/: configmap.yaml  deployment.yaml  echo.yaml  envoyfilter.yaml  gateway.yaml  httproute.yaml  namespace.yaml  service.yaml
docs/: architecture.md  configuration.md  conventions.md  development.md  getting-started.md  proposals.md
examples/: branch-chains.yaml  envoy.yaml  praxis-extproc.yaml
hack/: setup-kind.sh  smoke-test.sh  teardown-kind.sh
src/: adapter.rs  config.rs  error.rs  health.rs  lib.rs  metrics.rs  response.rs  server.rs  tls.rs
tests/: grpc_server.rs  integration.rs  services.rs
