[package]
name = "praxis-extproc"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
authors = ["Shane Utt <shaneutt@linux.com>"]
license = "MIT"
repository = "https://github.com/praxis-proxy/extproc"
description = "Envoy ExtProc server for Praxis filter pipelines"
publish = false

[[bin]]
name = "praxis-extproc"
path = "src/bin/praxis_extproc.rs"

[features]
integration = []

[dependencies]
async-trait = "0.1.89"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive"] }
http = "1.4.0"
praxis-core = { git = "https://github.com/praxis-proxy/praxis.git", package = "praxis-proxy-core" }
praxis-filter = { git = "https://github.com/praxis-proxy/praxis.git", package = "praxis-proxy-filter", features = ["ext-proc"] }
praxis-proto = { git = "https://github.com/praxis-proxy/praxis.git", package = "praxis-proxy-proto" }
hyper = { version = "1.9.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
http-body-util = "0.1.3"
metrics = "0.24.2"
metrics-exporter-prometheus = { version = "0.16.2", default-features = false }
prost = "0.14.3"
rcgen = "0.13.2"
rustls = "0.23.40"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread", "signal"] }
tokio-rustls = "0.26.4"
tokio-stream = "0.1.17"
tonic = { version = "0.14.6", features = ["tls-ring", "transport"] }
tonic-health = "0.14.6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

[dev-dependencies]
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread", "test-util"] }

[lints.rust]
dead_code = "deny"
missing_docs = "deny"
unreachable_pub = "deny"
unused_imports = "deny"
unused_variables = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
macro_use_extern_crate = "deny"
unused_extern_crates = "deny"
elided_lifetimes_in_paths = "deny"
single_use_lifetimes = "deny"
unused_qualifications = "deny"
unused_macro_rules = "deny"
meta_variable_misuse = "deny"
let_underscore_drop = "deny"
non_ascii_idents = "deny"
noop_method_call = "deny"
redundant_lifetimes = "deny"
missing_debug_implementations = "allow"

[lints.clippy]
# Async and concurrency safety
await_holding_lock = "deny"
future_not_send = "deny"
large_futures = "deny"
# Memory and allocation efficiency
implicit_clone = "deny"
inefficient_to_string = "deny"
large_enum_variant = "deny"
large_types_passed_by_value = "deny"
needless_pass_by_value = "deny"
rc_buffer = "deny"
str_to_string = "deny"
trivially_copy_pass_by_ref = "deny"
vec_init_then_push = "deny"
# API design
return_self_not_must_use = "deny"
# Documentation
doc_markdown = "deny"
missing_docs_in_private_items = "deny"
empty_line_after_outer_attr = "allow"
# Idiomatic Rust
checked_conversions = "deny"
cloned_instead_of_copied = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
flat_map_option = "deny"
from_iter_instead_of_collect = "deny"
manual_assert = "deny"
manual_instant_elapsed = "deny"
manual_let_else = "deny"
manual_ok_or = "deny"
manual_string_new = "deny"
map_unwrap_or = "deny"
redundant_closure_for_method_calls = "deny"
unnested_or_patterns = "deny"
# Borrow hygiene
needless_borrow = "deny"
# Code clarity
if_not_else = "deny"
match_bool = "deny"
match_same_arms = "deny"
mut_mut = "deny"
needless_for_each = "deny"
range_plus_one = "deny"
redundant_else = "deny"
semicolon_if_nothing_returned = "deny"
uninlined_format_args = "deny"
unreadable_literal = "deny"
unused_self = "deny"
# Import hygiene
enum_glob_use = "deny"
wildcard_imports = "deny"
# String handling
string_add_assign = "deny"
# Function size
too_many_lines = "deny"
# Dev hygiene
dbg_macro = "deny"
print_stderr = "deny"
print_stdout = "deny"
# Cast safety
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
cast_precision_loss = "deny"
ptr_as_ptr = "deny"
# Documentation completeness
missing_errors_doc = "deny"
missing_panics_doc = "deny"
# Dead code detection
unused_async = "deny"
unnecessary_wraps = "deny"
needless_pass_by_ref_mut = "deny"
no_effect_underscore_binding = "deny"
used_underscore_binding = "deny"
# API hygiene
option_option = "deny"
ref_option_ref = "deny"
default_trait_access = "deny"
expl_impl_clone_on_copy = "deny"
# Code clarity (extended)
items_after_statements = "deny"
macro_use_imports = "deny"
needless_continue = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_functions_in_if_condition = "deny"
stable_sort_primitive = "deny"
string_add = "deny"
string_lit_as_bytes = "deny"
trait_duplication_in_bounds = "deny"
type_repetition_in_bounds = "deny"
verbose_bit_mask = "deny"
zero_sized_map_values = "deny"
# Boolean hygiene
fn_params_excessive_bools = "deny"
struct_excessive_bools = "deny"
# Complexity (thresholds in clippy.toml)
cognitive_complexity = "deny"
too_many_arguments = "deny"
# Safety and correctness
unwrap_used = "deny"
missing_assert_message = "deny"
map_err_ignore = "deny"
or_fun_call = "deny"
clone_on_ref_ptr = "deny"
debug_assert_with_mut_call = "deny"
collection_is_never_read = "deny"
significant_drop_in_scrutinee = "deny"
mutex_integer = "deny"
mutex_atomic = "deny"
allow_attributes_without_reason = "deny"
significant_drop_tightening = "warn"
# Diagnostic hygiene
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"
# Redundancy
redundant_type_annotations = "deny"
needless_raw_strings = "deny"
needless_raw_string_hashes = "deny"
# Idiomatic Rust (extended)
inconsistent_struct_constructor = "deny"
match_wildcard_for_single_variants = "deny"
single_match_else = "deny"
empty_drop = "deny"
manual_clamp = "deny"
# Safety documentation
undocumented_unsafe_blocks = "deny"
missing_safety_doc = "deny"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = true
